--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-language: java
+language: android
 
-jdk:
-  - oraclejdk8
+android:
+  components:
+    - build-tools-23.0.2
+    - android-23
 
 script:
   - bash ./gradlew test
